syntax = "proto3";
package VotingAPI.v1;
option csharp_namespace = "Voting.Server.Protos.v1";
import "google/protobuf/empty.proto";
//import "google/protobuf/timestamp.proto";

service VotingService {
	rpc GetCandidateVotes(CandidateIdRequest) returns (stream Section) {}
	rpc GetSectionVotes(SectionIdRequest) returns (Section) {}
	rpc GetTotalVotesBySection(SectionIdRequest) returns (TotalVotesReply) {}
	rpc GetTotalVotesByCandidate(CandidateIdRequest) returns (TotalVotesReply) {}
	rpc CreateSection(stream Section) returns (google.protobuf.Empty) {}
}

message Sections
{
	repeated Section SectionList = 1;
}
message Section
{
	uint32 SectionID = 1;
	repeated CandidateVotes CandidateVotes = 2;
}
message CandidateVotes
{
	uint32 Candidate =  1;
	uint32 Votes = 2;
}
message TotalVotesReply
{
	int64 TotalVotes = 1;
}
message CandidateIdRequest
{
	uint32 Candidate = 1;
}
message SectionIdRequest
{
	uint32 Section = 1;
}